fix svg overflow and change foter color

--- a/css/custom_style.css
+++ b/css/custom_style.css
@@ -5,8 +5,8 @@
 .main-text {
   font-size: 1.8em;
   font-family: "Arvo", serif;
-  margin-top: 1%;
-  margin-bottom: 4%;
+  /* margin-top: 1%;
+  margin-bottom: 4%; */
   text-transform: uppercase;
   letter-spacing: 2px;
 }
@@ -41,8 +41,8 @@
   }
   .main-text {
     font-size: 1.5em;
-    margin-top: 15%;
-    margin-bottom: 25%;
+    /* margin-top: 15%;
+    margin-bottom: 25%; */
     text-transform: uppercase;
   }
 }
